feat: add race, lobby crud
