# docs/swagger.yaml
@@ -6,6 +6,64 @@ definitions:
       message:
         type: string
     type: object
+  dto.LobbyCreateRequest:
+    properties:
+      admin_user_id:
+        type: integer
+      name:
+        type: string
+      races:
+        items:
+          type: integer
+        type: array
+      users:
+        items:
+          type: integer
+        type: array
+    required:
+    - admin_user_id
+    - name
+    - users
+    type: object
+  dto.LobbyResponse:
+    properties:
+      admin_user_id:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      races:
+        items:
+          $ref: '#/definitions/dto.RaceResponse'
+        type: array
+      users:
+        items:
+          $ref: '#/definitions/dto.UserResponse'
+        type: array
+    type: object
+  dto.LobbyUpdateRequest:
+    properties:
+      admin_user_id:
+        type: integer
+      id:
+        type: integer
+      name:
+        type: string
+      races:
+        items:
+          type: integer
+        type: array
+      users:
+        items:
+          type: integer
+        type: array
+    required:
+    - admin_user_id
+    - id
+    - name
+    - users
+    type: object
   dto.LoginRequest:
     properties:
       email:
@@ -21,6 +79,17 @@ definitions:
   dto.LoginResponse:
     properties:
       token:
+        type: string
+    type: object
+  dto.ParagraphResponse:
+    properties:
+      id:
+        type: integer
+      length:
+        type: integer
+      source:
+        type: string
+      text:
         type: string
     type: object
   dto.PermissionResponse:
@@ -49,6 +118,91 @@ definitions:
         type: string
     required:
     - name
+    type: object
+  dto.RaceCreateRequest:
+    properties:
+      admin_user_id:
+        type: integer
+      finished:
+        type: boolean
+      lobby_id:
+        type: integer
+      paragraph_id:
+        type: integer
+      users:
+        items:
+          type: integer
+        type: array
+    required:
+    - admin_user_id
+    - finished
+    - lobby_id
+    - paragraph_id
+    - users
+    type: object
+  dto.RaceResponse:
+    properties:
+      admin_user_id:
+        type: integer
+      id:
+        type: integer
+      lobby_id:
+        type: integer
+      paragraph_id:
+        type: integer
+      users:
+        items:
+          $ref: '#/definitions/dto.UserResponse'
+        type: array
+    type: object
+  dto.RaceUpdateRequest:
+    properties:
+      admin_user_id:
+        type: integer
+      finished:
+        type: boolean
+      id:
+        type: integer
+      lobby_id:
+        type: integer
+      paragraph_id:
+        type: integer
+      users:
+        items:
+          type: integer
+        type: array
+    required:
+    - admin_user_id
+    - finished
+    - id
+    - lobby_id
+    - paragraph_id
+    - users
+    type: object
+  dto.RegisterRequest:
+    properties:
+      email:
+        maxLength: 125
+        type: string
+      name:
+        maxLength: 125
+        type: string
+      password:
+        minLength: 8
+        type: string
+      password_repeat:
+        minLength: 8
+        type: string
+    required:
+    - email
+    - name
+    - password
+    - password_repeat
+    type: object
+  dto.RegisterResponse:
+    properties:
+      token:
+        type: string
     type: object
   dto.RoleAddPermissionsRequest:
     properties:
@@ -95,6 +249,41 @@ definitions:
     required:
     - name
     type: object
+  dto.UserRaceResultCreateRequest:
+    properties:
+      accuracy:
+        maximum: 100
+        type: integer
+      duration:
+        type: integer
+      race_id:
+        type: integer
+      user_id:
+        type: integer
+      wpm:
+        type: integer
+    required:
+    - accuracy
+    - duration
+    - race_id
+    - user_id
+    - wpm
+    type: object
+  dto.UserRaceResultResponse:
+    properties:
+      accuracy:
+        type: integer
+      duration:
+        type: integer
+      id:
+        type: integer
+      race_id:
+        type: integer
+      user_id:
+        type: integer
+      wpm:
+        type: integer
+    type: object
   dto.UserResponse:
     properties:
       created_at:
@@ -130,13 +319,137 @@ definitions:
     required:
     - password
     type: object
-host: localhost:8081
+host: localhost:8080
 info:
   contact: {}
-  description: Auth service docs
-  title: Auth service
+  description: Backend for speedtyping service
+  title: Typograph Backend
   version: "1.0"
 paths:
+  /lobbies:
+    get:
+      consumes:
+      - application/json
+      description: List of lobbies
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dto.LobbyResponse'
+                  type: array
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - lobby
+    post:
+      consumes:
+      - application/json
+      description: Create a new lobby
+      parameters:
+      - description: Lobby store request
+        in: body
+        name: lobbyStoreRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LobbyCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.LobbyResponse'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - lobby
+  /lobbies/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a lobby
+      parameters:
+      - description: Lobby ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.JSONResult'
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - lobby
+    get:
+      consumes:
+      - application/json
+      description: Get a lobby by id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.LobbyResponse'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - lobby
+    patch:
+      consumes:
+      - application/json
+      description: Update a lobby
+      parameters:
+      - description: Lobby update request
+        in: body
+        name: lobbyStoreRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LobbyUpdateRequest'
+      - description: Lobby ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.LobbyResponse'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - lobby
   /login:
     post:
       consumes:
@@ -314,6 +627,205 @@ paths:
       - ApiKeyAuth: []
       tags:
       - permission
+  /races:
+    get:
+      consumes:
+      - application/json
+      description: List of races
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dto.RaceResponse'
+                  type: array
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - race
+    post:
+      consumes:
+      - application/json
+      description: Create a new race
+      parameters:
+      - description: Race store request
+        in: body
+        name: raceStoreRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RaceCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.RaceResponse'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - race
+  /races/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a race
+      parameters:
+      - description: Race ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.JSONResult'
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - race
+    get:
+      consumes:
+      - application/json
+      description: Get a race by id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.RaceResponse'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - race
+    patch:
+      consumes:
+      - application/json
+      description: Update a race
+      parameters:
+      - description: Race update request
+        in: body
+        name: raceStoreRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RaceUpdateRequest'
+      - description: Race ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.RaceResponse'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - race
+  /races/add_user_race_result:
+    post:
+      consumes:
+      - application/json
+      description: Add a race result for each user
+      parameters:
+      - description: Result update request
+        in: body
+        name: userRaceResultCreateRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserRaceResultCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.UserRaceResultResponse'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - race
+  /random_paragraph:
+    get:
+      consumes:
+      - application/json
+      description: Get random quote
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.ParagraphResponse'
+              type: object
+      security:
+      - ApiKeyAuth: []
+      tags:
+      - paragraph
+  /register:
+    post:
+      consumes:
+      - application/json
+      description: Register a user
+      parameters:
+      - description: Register Request
+        in: body
+        name: registerRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.JSONResult'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.RegisterResponse'
+              type: object
+      tags:
+      - auth
   /role/{id}/permissions:
     delete:
       consumes:
@@ -493,7 +1005,7 @@ paths:
             - $ref: '#/definitions/dto.JSONResult'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.PermissionResponse'
+                  $ref: '#/definitions/dto.RoleResponse'
               type: object
       security:
       - ApiKeyAuth: []
