# src/dto/race_dto.go
@@ -5,21 +5,26 @@ import (
 )
 
 type RaceCreateRequest struct {
-	Finished    bool `json:"finished" validate:"required"`
-	AdminUserID uint `json:"admin_user_id" validate:"required"`
-	ParagraphID uint `json:"paragraph_id" validate:"required"`
+	Finished    bool   `json:"finished" validate:"required"`
+	AdminUserID uint   `json:"admin_user_id" validate:"required"`
+	LobbyID     uint   `json:"lobby_id" validate:"required"`
+	Users       []uint `json:"users" validate:"required"`
+	ParagraphID uint   `json:"paragraph_id" validate:"required"`
 }
 
 type RaceUpdateRequest struct {
+	ID          uint   `json:"id" validate:"required"`
 	Finished    bool   `json:"finished" validate:"required"`
 	AdminUserID uint   `json:"admin_user_id" validate:"required"`
-	Users       []uint `json:"users"`
+	LobbyID     uint   `json:"lobby_id" validate:"required"`
+	Users       []uint `json:"users" validate:"required"`
 	ParagraphID uint   `json:"paragraph_id" validate:"required"`
 }
 
 type RaceResponse struct {
 	ID          uint            `json:"id"`
 	AdminUserID uint            `json:"admin_user_id"`
+	LobbyID     uint            `json:"lobby_id"`
 	Users       []*UserResponse `json:"users"`
 	ParagraphID uint            `json:"paragraph_id"`
 }
@@ -33,6 +38,7 @@ func NewRaceResponse(race *model.Race) *RaceResponse {
 	return &RaceResponse{
 		ID:          race.ID,
 		AdminUserID: race.AdminUserID,
+		LobbyID:     race.LobbyID,
 		Users:       usersResponse,
 		ParagraphID: race.ParagraphID,
 	}
