# src/model/lobby.go
@@ -1,0 +1,12 @@
+package model
+
+import "gorm.io/gorm"
+
+type Lobby struct {
+	gorm.Model
+	AdminUserID uint
+	Name        string  `gorm:"not null;"`
+	AdminUser   *User   `gorm:"foreignKey:AdminUserID"`
+	Users       []*User `gorm:"many2many:lobby_users;"`
+	Races       []*Race `gorm:"foreignKey:LobbyID"`
+}
